terraform/modules/eks/securitygroups.tf

resource "aws_security_group" "demo-cluster" {
    name = "terraform-eks-demo-cluster"
    description = "Cluster communication with worker nodes"
    vpc_id = "${aws_vpc.demo.id}"

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "terraform-eks-demo"
    }

}

resource "aws_security_group_rule" "demo-cluster-ingress-workstation-https" {
    cidr_blocks = ["12.25.175.47/32"]
    description = "Allow workstation to communicate with the cluster API server"
    from_port = 443
    protocol = "tcp"
    security_group_id = "${aws_security_group.demo-cluster.id}"
    to_port = 443
    type = "ingress"
}

resource "aws_security_group" "demo-node" {
    name = "terraform-eks-demo-node"
    description = "Security group for all nodes in the cluster"
    vpc_id = "${aws_vpc.demo.id}"

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = "${
        map(
            "Name", "terraform-eks-demo-node",
            "kubernetes.io/cluster/${var.cluster-name}", "owned",
        )
    }"
}

resource "aws_security_group_rule" "demo-node-ingress-self" {
    description = "Allow nodes to communicate with each other"
    from_port = 0
    protocol = "-1"
    security_group_id = "${aws_security_group.demo-node.id}"
    source_security_group_id = "${aws_security_group.demo-node.id}"
    to_port = 65535
    type = "ingress"
}

resource "aws_security_group_rule" "demo-node-ingress-cluster" {
    description = "Allow worker Kubelets and pods to receive communication from the cluster control plane"
    from_port = 1025
    protocol = "tcp"
    security_group_id = "${aws_security_group.demo-node.id}"
    source_security_group_id = "${aws_security_group.demo-cluster.id}"
    to_port = 65535
    type = "ingress"
}

resource "aws_security_group_rule" "demo-cluster-ingress-node-https" {
    description = "Allow pods to communicate with the cluster API Server"
    from_port = 443
    protocol = "tcp"
    security_group_id = "${aws_security_group.demo-cluster.id}"
    source_security_group_id = "${aws_security_group.demo-node.id}"
    to_port = 443
    type = "ingress"
}
